# qt

./: Qt-intermediate assigment-1.xlsx
Qt-ci-3-1/: CMakeLists.txt  main.cpp  test.cpp  test.h
Qt-ci-6/View/: CMakeLists.txt  main.cpp
Qt-ci-6/build-View-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Qt-intermediate-assigment-1/: CMakeLists.txt  datatransfer.cpp  datatransfer.h  example.txt  main.cpp
build-Qt-ci-3-1-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  Makefile.Debug  Makefile.Release  build.ninja  cmake_install.cmake
build-Qt-ci-3-1-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Qt-ci-3-1-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Qt-ci-3-1-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/Qt-CI-3-1_autogen/: deps
build-Qt-intermediate-assigment-1-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  example.txt  transfer.txt
build-Qt-intermediate-assigment-1-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Qt-intermediate-assigment-1-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Qt-intermediate-assigment-1-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/Qt-intermediate-assigment-1_autogen/: deps
build-create-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-create-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-create-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-create-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/create_autogen/: deps
build-demo-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  decrypt.txt  decrypted_output.txt  encryptionkey.txt  example.txt  transfer.txt
build-demo-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-demo2-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-qtinterasspract-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  decrypted.txt  transfer.txt
create/: CMakeLists.txt  bufferhandler.cpp  bufferhandler.h  main.cpp
demo/: CMakeLists.txt  aesmanager.cpp  aesmanager.h  bufferhandler.cpp  bufferhandler.h  communicationlog.cpp  communicationlog.h  main.cpp  transfer.cpp  transfer.h
demo2/: CMakeLists.txt  main.cpp
qt-4-3/parent_child/: CMakeLists.txt
qt-ci-7/qt-7-filename/: CMakeLists.txt  main.cpp
qtinterasspract/: CMakeLists.txt  datatransfer.cpp  datatransfer.h  main.cpp
(+300 files in other folders)
